feat: properties file created

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 target
+
+# Sensitive configuration files
+src/main/resources/application.properties
+
+# IDE
+.vscode/
+.idea/
+*.iml
+
+# OS
+.DS_Store
+Thumbs.db
