fix: setting env viriables

--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,8 +1,8 @@
-# Database Configuration (EXAMPLE - Copy to application.properties and update with real values)
-db.url=
-db.username=
-db.password=
+# Database Configuration
+db.url=jdbc:postgresql://postgres:5432/appdb
+db.username=postgres
+db.password=password
 
 # Application Configuration
-app.name=Users WebLogic App
+app.name=Users App
 app.version=1.0.0
